--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
