--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
+    "@mui/x-date-pickers": "^7.23.2",
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -20,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.0",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
