--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.0",
+    "react-select": "^5.9.0",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.6"
   },
