--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
